# Master

./: STM32H743ZITX_FLASH.ld  cross_file.build  meson.build  openocd.cfg  stm32h7xx_hal_msp.c  stm32h7xx_it.c
application/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
application/Startup/: startup_stm32h743zitx.s
application/hardware/cmsis/: stm32h7xx_it.h
application/hardware/hal/: stm32h7xx_hal_conf.h
application/modules/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h
application/modules/cdc_wrapper/: meson.build
application/modules/cdc_wrapper/src/: cdc_wrapper.c  cdc_wrapper.h
application/modules/grnn/: meson.build
application/modules/grnn/src/: grnn.c  grnn.h
application/modules/hma/: meson.build
application/modules/hma/src/: hma.c  hma.h
application/modules/main_module/: meson.build
application/modules/main_module/src/: main.c  main.h
