# meson.build for cdc_wrapper

sources = []
sources += files('src/cdc_wrapper.c')
include = []
include += include_directories('src')
# Add more source files for cdc_wrapper as needed

# Export the sources list for use in the main project build
project_sources += sources
target_include_dir += include